feat: add batch processing and metrics to UpdateBalancesService