@@ -1,24 +1,30 @@
 package org.ikigaidigital.application.service;
 
+import io.micrometer.core.instrument.simple.SimpleMeterRegistry;
+import org.ikigaidigital.adapter.in.rest.config.DepositMetrics;
 import org.ikigaidigital.application.port.out.TimeDepositRepository;
 import org.ikigaidigital.domain.model.TimeDeposit;
 import org.ikigaidigital.domain.service.TimeDepositCalculator;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.ArgumentCaptor;
-import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.PageRequest;
 
+import java.util.Collections;
 import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyDouble;
 import static org.mockito.ArgumentMatchers.anyInt;
-import static org.mockito.ArgumentMatchers.anyList;
-import static org.mockito.Mockito.doAnswer;
+import static org.mockito.ArgumentMatchers.eq;
+import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.never;
+import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
@@ -28,75 +34,73 @@ class UpdateBalancesServiceTest {
     @Mock
     private TimeDepositRepository repository;
 
-    @Mock
     private TimeDepositCalculator calculator;
-
-    @InjectMocks
+    private DepositMetrics metrics;
     private UpdateBalancesService service;
-
-    private List<TimeDeposit> deposits;
 
     @BeforeEach
     void setUp() {
-        deposits = List.of(
-            new TimeDeposit(1, "basic", 1000.00, 31),
-            new TimeDeposit(2, "student", 2000.00, 365)
-        );
+        calculator = new TimeDepositCalculator();
+        metrics = new DepositMetrics(new SimpleMeterRegistry());
+        service = new UpdateBalancesService(1000, repository, calculator, metrics);
     }
 
     @Test
-    void shouldFetchAllDepositsFromRepository() {
-        when(repository.findAll()).thenReturn(deposits);
-
-        service.updateBalances();
-
-        verify(repository).findAll();
-    }
-
-    @Test
-    void shouldDelegateCalculationToCalculator() {
-        when(repository.findAll()).thenReturn(deposits);
-
-        service.updateBalances();
-
-        ArgumentCaptor<List<TimeDeposit>> captor = ArgumentCaptor.forClass(List.class);
-        verify(calculator).updateBalance(captor.capture());
-        assertThat(captor.getValue()).hasSize(2);
-    }
-
-    @Test
-    void shouldPersistUpdatedBalancesForEachDeposit() {
-        when(repository.findAll()).thenReturn(deposits);
-        doAnswer(invocation -> {
-            List<TimeDeposit> deps = invocation.getArgument(0);
-            deps.get(0).setBalance(1000.83);
-            deps.get(1).setBalance(2005.00);
-            return null;
-        }).when(calculator).updateBalance(anyList());
-
-        service.updateBalances();
-
-        verify(repository).updateBalance(1, 1000.83);
-        verify(repository).updateBalance(2, 2005.00);
-    }
-
-    @Test
-    void shouldReturnUpdatedDeposits() {
-        when(repository.findAll()).thenReturn(deposits);
-
-        List<TimeDeposit> result = service.updateBalances();
-
-        assertThat(result).hasSize(2);
-    }
-
-    @Test
-    void shouldHandleEmptyDepositList() {
-        when(repository.findAll()).thenReturn(List.of());
+    void shouldReturnEmptyListWhenNoDeposits() {
+        Page<TimeDeposit> emptyPage = new PageImpl<>(Collections.emptyList());
+        when(repository.findAll(any(PageRequest.class))).thenReturn(emptyPage);
 
         List<TimeDeposit> result = service.updateBalances();
 
         assertThat(result).isEmpty();
-        verify(calculator).updateBalance(anyList());
         verify(repository, never()).updateBalance(anyInt(), anyDouble());
+    }
+
+    @Test
+    void shouldProcessSingleBatch() {
+        TimeDeposit deposit = new TimeDeposit(1, "basic", 1000.0, 45);
+        Page<TimeDeposit> page = new PageImpl<>(List.of(deposit));
+        when(repository.findAll(any(PageRequest.class))).thenReturn(page);
+
+        List<TimeDeposit> result = service.updateBalances();
+
+        assertThat(result).hasSize(1);
+        assertThat(result.get(0).getBalance()).isGreaterThan(1000.0);
+        verify(repository).updateBalance(eq(1), anyDouble());
+    }
+
+    @Test
+    void shouldRecordMetrics() {
+        Page<TimeDeposit> emptyPage = new PageImpl<>(Collections.emptyList());
+        when(repository.findAll(any(PageRequest.class))).thenReturn(emptyPage);
+
+        service.updateBalances();
+
+        assertThat(metrics.getBalanceUpdateCount().count()).isEqualTo(1.0);
+    }
+
+    @SuppressWarnings("unchecked")
+    @Test
+    void shouldProcessMultipleBatches() {
+        TimeDeposit d1 = new TimeDeposit(1, "basic", 1000.0, 45);
+        TimeDeposit d2 = new TimeDeposit(2, "student", 2000.0, 100);
+
+        Page<TimeDeposit> firstPage = mock(Page.class);
+        when(firstPage.getContent()).thenReturn(List.of(d1));
+        when(firstPage.hasNext()).thenReturn(true);
+        when(firstPage.getNumberOfElements()).thenReturn(1);
+
+        Page<TimeDeposit> secondPage = mock(Page.class);
+        when(secondPage.getContent()).thenReturn(List.of(d2));
+        when(secondPage.hasNext()).thenReturn(false);
+        when(secondPage.getNumberOfElements()).thenReturn(1);
+
+        when(repository.findAll(PageRequest.of(0, 1000))).thenReturn(firstPage);
+        when(repository.findAll(PageRequest.of(1, 1000))).thenReturn(secondPage);
+
+        List<TimeDeposit> result = service.updateBalances();
+
+        assertThat(result).hasSize(2);
+        verify(repository, times(2)).updateBalance(anyInt(), anyDouble());
     }
 }
